--- a/Templates/about.html
+++ b/Templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>About2</h1>
+<h1>About2 Se pasa a la Rama 1</h1>
 <p>This is a template of about</p>
 {% endblock %}
