--- a/Templates/base.html
+++ b/Templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>The coding is made to learn django</title>
+    <title>Cambio de la rama 2</title>
 </head>
 <body>
     {% include 'navbar.html' %}
