--- a/Templates/base.html
+++ b/Templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <title>The coding is made to learn django</title>
     <title>Cambio de la rama 2</title>
+    <title>Se agrega la rama 3</title>
 </head>
 <body>
     {% include 'navbar.html' %}
