--- a/Templates/base.html
+++ b/Templates/base.html
@@ -4,6 +4,7 @@
     <title>The coding is made to learn django</title>
     <title>Cambio de la rama 2</title>
     <title>Se agrega la rama 3</title>
+    <title>Se agrega la rama 3.1</title>
 </head>
 <body>
     {% include 'navbar.html' %}
